# altona-remake

./: .gitmodules  CMakeLists.txt  README.md  altona_config.hpp
asc/: CMakeLists.txt  Makefile  Makefile.asc  asc.sln  asc.vcxproj  asc.vcxproj.filters  longtest.txt  main.cpp  main.hpp  new.cpp  output.cpp  parse.cpp  test.txt
asc/release_linux_blank_shell/: asc
asc/release_linux_blank_shell/.deps/: main.P  new.P  output.P  parse.P  scanner.P
base/: CMakeLists.txt  Makefile  Makefile.base  Makefile.linux.boot  base.sln  base.vcxproj  base.vcxproj.filters  devices.hpp  devices_win.cpp  graphics.cpp  graphics.hpp  graphics_blank.cpp  graphics_dx11.cpp  graphics_dx11_private.hpp  graphics_dx9.cpp  graphics_dx9_private.hpp  graphics_ogl2.cpp  graphics_ogl2_old.cpp  graphics_ogles2.cpp  input2.cpp  input2.hpp  math.cpp  math.hpp  npplugin.cpp  serialize.cpp  serialize.hpp  sound.hpp  sound_common.cpp  sound_directx.cpp  sound_pulseaudio.cpp  system.cpp  system.hpp  system_ios.cpp  system_linux.cpp  system_win.cpp  system_xsi.cpp  types.cpp  types.hpp  types2.cpp  types2.hpp  (+3 more)
base/release_linux_blank_shell/.deps/: devices_win.P  graphics.P  graphics_blank.P  input2.P  math.P  serialize.P  sound.P  system.P  system_linux.P  types.P  types2.P  windows.P  windows_xlib.P
examples/: CMakeLists.txt
examples/backbuffer/: CMakeLists.txt  main.cpp  main.hpp
examples/cube/: CMakeLists.txt  main.cpp  main.hpp
examples/cubemap/: CMakeLists.txt  main.cpp  main.hpp
examples/recttoy/: CMakeLists.txt  Makefile  Makefile.recttoy  main.cpp  main.hpp  recttoy.sln  recttoy.vcxproj  recttoy.vcxproj.filters
examples/window/: main.cpp  main.hpp
examples/wireapp/: CMakeLists.txt  Makefile  Makefile.wireapp  doc.cpp  doc.hpp  gui.cpp  main.cpp  wireapp.sln  wireapp.vcxproj  wireapp.vcxproj.filters
gui/: 3dwindow.cpp  3dwindow.hpp  CMakeLists.txt  borders.cpp  borders.hpp  color.cpp  color.hpp  controls.cpp  controls.hpp  dialog.cpp  dialog.hpp  frames.cpp  frames.hpp  listwindow.cpp  listwindow.hpp  manager.cpp  manager.hpp  overlapped.cpp  overlapped.hpp  tabs.cpp  tabs.hpp  textwindow.cpp  textwindow.hpp  timeline.cpp  timeline.hpp  window.cpp  window.hpp  wire.cpp  wire.hpp
old/: graphics.cpp  graphics.hpp  graphics_blank.cpp  graphics_dx11.cpp  graphics_dx11_private.hpp  graphics_dx9.cpp  graphics_dx9_private.hpp  graphics_ogl2.cpp  shaders.asc
shadercomp/: CMakeLists.txt  Makefile  Makefile.shadercomp  asc_doc.cpp  asc_doc.hpp  asc_output.cpp  asc_parser.cpp  compile_cg.cpp  compile_dx.cpp  shadercomp.cpp  shadercomp.hpp  shadercomp.sln  shadercomp.vcxproj  shadercomp.vcxproj.filters  shaderdis.cpp  shaderdis.hpp
shadercomp/release_linux_blank_shell/.deps/: asc_doc.P  asc_output.P  asc_parser.P  compile_cg.P  shaderdis.P
tools/: asc
util/: CMakeLists.txt  Makefile  Makefile.linux.boot  Makefile.util  algorithms.hpp  animation.cpp  animation.hpp  bitio.cpp  bitio.hpp  camera.cpp  camera.hpp  effect.cpp  effect.hpp  fastcompress.cpp  fastcompress.hpp  graphics.cpp  image.cpp  image.hpp  ipp.cpp  ipp.hpp  json.hpp  movieplayer.cpp  movieplayer.hpp  musicplayer.cpp  musicplayer.hpp  painter.cpp  painter.hpp  perfmon.cpp  perfmon.hpp  rasterizer.cpp  rasterizer.hpp  scanconfig.cpp  scanconfig.hpp  scanner.cpp  scanner.hpp  shaders..cpp  shaders..hpp  shaders.asc  shaders.cpp  shaders.hpp  (+5 more)
util/release_linux_blank_shell/.deps/: animation.P  camera.P  effect.P  image.P  ipp.P  movieplayer.P  musicplayer.P  painter.P  perfmon.P  rasterizer.P  scanconfig.P  scanner.P  shaders.P  stb_image.P  taskscheduler.P
window_example/: CMakeLists.txt
